[gd_scene load_steps=4 format=3 uid="uid://ccij40iboevh"]

[ext_resource type="Theme" uid="uid://bwvkxk7ybstes" path="res://scenes/theme/theme.tres" id="1_75evk"]
[ext_resource type="Script" path="res://scenes/scripts/upgrades.gd" id="1_cspac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2bup"]

[node name="Upgrades" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_75evk")
script = ExtResource("1_cspac")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -765.5
offset_top = -351.0
offset_right = 763.5
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 200

[node name="Upgrades" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 141
text = "Upgrades"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 400

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Defensive" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 81
text = "Utility"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CapacityButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.481789, 0.481789, 0.481789, 1)
theme_override_colors/font_focus_color = Color(7.02709e-06, 0.79145, 0.167127, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_d2bup")
text = "Shield Capacity ("
flat = true

[node name="RechargeButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.481789, 0.481789, 0.481789, 1)
theme_override_colors/font_focus_color = Color(7.02709e-06, 0.79145, 0.167127, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_d2bup")
text = "Recharge Rate ("
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Offensive" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 81
text = "Blaster"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.481789, 0.481789, 0.481789, 1)
theme_override_colors/font_focus_color = Color(7.02709e-06, 0.79145, 0.167127, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_d2bup")
text = "Damage ("
flat = true

[node name="SpeedButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.481789, 0.481789, 0.481789, 1)
theme_override_colors/font_focus_color = Color(7.02709e-06, 0.79145, 0.167127, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_d2bup")
text = "Fire Rate ("
flat = true

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Abilities" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 81
text = "Abilities"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BurstButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.481789, 0.481789, 0.481789, 1)
theme_override_colors/font_focus_color = Color(7.02709e-06, 0.79145, 0.167127, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_d2bup")
text = "Shield Burst ("
flat = true

[node name="MagnetButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.481789, 0.481789, 0.481789, 1)
theme_override_colors/font_focus_color = Color(7.02709e-06, 0.79145, 0.167127, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_d2bup")
text = "Magnet ("
flat = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/CapacityButton" to="." method="upgrade_shield_capacity"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/RechargeButton" to="." method="upgrade_shield_recharge"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/DamageButton" to="." method="upgrade_blaster_damage"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/SpeedButton" to="." method="upgrade_blaster_speed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer3/BurstButton" to="." method="upgrade_burst"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer3/MagnetButton" to="." method="upgrade_magnet"]
